# boxrush

./: README.md  pyproject.toml
src/: main.py
src/assets/imgs/: btn_icon.xcf  button.xcf  human.xcf  skyeyebg.xcf  ui.xcf
