[tool.poetry]
name = "boxrush"
version = "0.1.0"
description = "game"
authors = ["Eleven-junichi2"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pygame = "^1.9.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
